# ai-writer-go

./: .gitignore  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  main.go  package-lock.json
.github/workflows/: release.yml
cmd/: analysis.go  architect.go  audit.go  batch.go  book.go  chapter.go  character.go  check.go  config.go  export.go  foreshadow.go  init.go  item.go  location.go  paragraph.go  review.go  root.go  server.go  server_unix.go  server_windows.go  stats.go  sync.go  tool.go  worldview.go  write.go
cmd/updater/: download.go  main.go  replace.go  utils.go
configs/: config.example.yaml
embedding_service/: build.py  embedding_server.py  requirements.txt
embedding_service_rust/: Cargo.toml
embedding_service_rust/src/: main.rs
internal/api/: router.go
internal/config/: config.go
internal/engine/: causal_chain.go  consistency.go  emotional_arc.go  info_boundary.go  narrative_thread.go
internal/errors/: errors.go  errors_test.go
internal/llm/: client.go  embedding.go  embedding_python.go  embedding_tei.go  mock.go  ollama.go  openai.go
internal/model/: analysis.go  book.go  causal_chain.go  character.go  foreshadow.go  item.go  narrative_thread.go  pending_sync.go  worldview.go
internal/service/: analysis.go  architect.go  book_analysis.go  consistency.go  context.go  emotion.go  graph.go  info_boundary.go  init.go  (+6 more)
scripts/: build-all-platforms.sh  build-release.bat  build-release.sh  build.sh  start.bat  start.sh  start_with_embedding.bat  start_with_embedding.sh
web/: index.html  package-lock.json  package.json  vite.config.js
(+40 files in other folders)
