[package]
name = "embedding_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Candle ML framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# HuggingFace tokenizers
tokenizers = { version = "0.19", features = ["onig"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async
anyhow = "1"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handling